# cpdf-source

./: .gitignore  133834.ps  Changes  Changes.txt  LICENSE  META  Makefile  OCamlMakefile  README.md  TODO  cpdf.1  cpdf.1.html  cpdf.1.md  cpdf.ml  cpdf.mli  cpdf.opam  cpdfJSON.ml  cpdfJSON.mli  cpdfaddtext.ml  cpdfaddtext.mli  cpdfannot.ml  cpdfannot.mli  cpdfattach.ml  cpdfattach.mli  cpdfbookmarks.ml  cpdfbookmarks.mli  cpdfchop.ml  cpdfchop.mli  cpdfclip.ml  cpdfclip.mli  cpdfcolours.ml  cpdfcolours.mli  cpdfcommand.ml  cpdfcommand.mli  cpdfcommandrun.ml  cpdfcomposition.ml  cpdfcomposition.mli  cpdfcontent.ml  cpdfcontent.mli  cpdfcoord.ml  (+128 more)
compressor/: Makefile  README.md  UnicodeData.txt  compressor.ml  run
cpdfmanual/: build.txt
debug/: README.md
docsplits/: splitjs  splitwrapper
dotnetsplits/: c00.tex  c01.tex  c02.tex  c03.tex  c04.tex  c05.tex  c06.tex  c07.tex  c08.tex  c09.tex  c10.tex  c11.tex  c12.tex  c13.tex  c14.tex  c15.tex  c16.tex  c17.tex  c18.tex  c19.tex  cm1.tex
html/: ht4latexcpdfmanual.html  ht4latexcpdfmanual.tex
html_manual/: .cpdfmanual.tex.swp  README.txt  clean  cpdfmanual.html  cpdfmanual.tex  go  index.tex
javascriptsplits/: c00.tex  c01.tex  c02.tex  c03.tex  c04.tex  c06.tex  c07.tex  c08.tex  c09.tex  c10.tex  c11.tex  c12.tex  c13.tex  c14.tex  c15.tex  c16.tex  c17.tex  c18.tex  c19.tex
javasplits/: c00.tex  c05.tex  c06.tex  c08.tex  c11.tex  c12.tex  c13.tex  c15.tex  c18.tex  c19.tex
old/: README.md
pysplits/: c00.tex  c01.tex  c02.tex  c03.tex  c04.tex  c05.tex  c06.tex  c07.tex  c09.tex  c10.tex  c11.tex  (+8 more)
(+106 files in other folders)
