opam-version: "2.0"
name: "cpdf"
version: "2.8"
maintainer: "contact@coherentgraphics.co.uk"
license: "AGPL-3.0-or-later"
build: [[make]]
depends: [
  "ocaml" {>= "4.10.0"}
  "ocamlfind" {build}
  "camlpdf" {= version}
]
homepage: "http://github.com/johnwhitington/cpdf-source"
authors: ["John Whitington"]
bug-reports: "http://github.com/johnwhitington/cpdf-source/issues"
dev-repo: "git+https://github.com/johnwhitington/cpdf-source"
install: [[make "install"]]
synopsis: "PDF command line tools"
